# lifeos

./: Cargo.toml  phase1.md
apps/cli/: Cargo.toml  lifeos.db  server.db
apps/cli/src/: main.rs
apps/server/: cargo.toml  server.db
apps/server/src/: handlers.rs  main.rs  routes.rs  state.rs
crates/lifeos-core/: Cargo.toml
crates/lifeos-core/src/: ids.rs  lib.rs  models.rs  sync_state.rs
crates/lifeos-engine/: Cargo.toml
crates/lifeos-engine/src/: error.rs  lib.rs  processor.rs  pull_processor.rs  sync_engine.rs  validator.rs
crates/lifeos-storage/: Cargo.toml
crates/lifeos-storage/src/: db.rs  errors.rs  lib.rs  repository.rs
crates/lifeos-sync/: Cargo.toml
crates/lifeos-sync/src/: api.rs  changelog.rs  lib.rs  operations.rs
