[package]
name = "lifeos-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

lifeos-core = { path = "../lifeos-core" }
lifeos-sync = { path = "../lifeos-sync" }
